--- a/.hintrc
+++ b/.hintrc
@@ -14,6 +14,12 @@
       {
         "link-name": "off"
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "select-name": "off"
+      }
     ]
   }
 }
