--- a/masterkey-backend/.env
+++ b/masterkey-backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URI_LOCAL=mongodb://localhost:27017
+MONGODB_URI = "mongodb+srv://georgehussein:ed4oklVMszouyaWI@backenddb.5roxosq.mongodb.net/?retryWrites=true&w=majority&appName=BackendDB"
